<resources>
    <string name="app_name">Soz Sende</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_state_text">You need to log in and \n configure your settings</string>
    <string name="searching_gps_text">Searching using GPS...</string>
    <string name="sms_sent">Sms sent</string>
    <string name="sms_fail">Fail. Please try again</string>
    <string name="check_gps_false">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_settings">Location Settings</string>
    <string name="cancel">Cancel</string>
    <string name="lat">lat: </string>
    <string name="lng">lng: </string>
    <string name="login">Your are logged in!</string>
    <string name="logout">Your are logged out!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="settings">Settings</string>
    <string name="first_phone_num">First phone number</string>
    <string name="second_phone_num">Second phone number</string>
    <string name="message">Message</string>
    <string name="save">Save</string>
    <string name="manual">Manual</string>
    <string name="registration">registration</string>
    <string name="helloText">Welcome to the Help Me Button app</string>
    <string name="helloDiscription">You need to log in or register for app to work properly</string>
    <string name="settingsDescription">Let\'s add phone numbers and message</string>
    <string name="settingsText">Great!</string>
    <string name="permissionsText">Cool!</string>
    <string name="permissionsDiscription">You need to grant permissions</string>
    <string name="settingsButton">Add</string>
    <string name="fourthSlideText">Excellent!</string>
    <string name="fourthSlideDiscription">Let\'s start</string>
    <string name="title_activity_sliding_groups">SlidingGroupsActivity</string>

    <string name="noGPSPermissionText">You need to grant GPS permission in help menu </string>
    <string name="noSMSPermissionText">You need to grant SMS permission in help menu</string>
    <string name="dataSaved">Data saved</string>
    <string name="enterPhoneNumbers">We recommend to enter two phone numbers</string>
    <string name="enterMessage">Enter message</string>
    <string name="permissionsDescriptionGPS">GPS permission is required for app to work properly</string>
    <string name="permissionsDescriptionSMS">SMS permission is required for app to work properly</string>
    <string name="introGroups">You can create and join groups so you will get notified when somebody from your group press button</string>
    <string name="noCoordinates">Coordinates unknown</string>
    <string name="joinToGroup">Join</string>
    <string name="you_need_to_log_in">You need to log in and configure your settings</string>
    <string name="groups">Groups</string>
    <string name="help">Help</string>
    <string name="map">Map</string>
    <string name="alert">Alert</string>
    <string name="events">Events</string>
    <string name="information">Info</string>


    <string name="opportunities">Opportunities</string>
    <string name="read">Read</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="permissionDescriptionReadPhoneState">Permission to manage phone calls is required for app to work properly</string>
    <string name="no_phone_numbers">Phone numbers are not specified</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="add_phone_number">Add phone number</string>

</resources>
